--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,27 +3,27 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_black"
         android:title="@string/app_name" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_search_black"
         android:title="@string/search" />
 
     <item
         android:id="@+id/navigation_add_post"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_add_box_black"
         android:title="@string/title_add_post" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_favorite_border_black"
         android:title="@string/title_notifications" />
 
     <item
         android:id="@+id/navigation_account"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_person_outline_black"
         android:title="@string/account" />
 
 </menu>
