--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#636363</color>
+
+    <color name="colorGray">#CDCDCD</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
