--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_add_post"
-        android:name="com.anggastudio.instague.ui.AddPost.AddPostFragment"
+        android:name="com.anggastudio.instague.ui.addpost.AddPostFragment"
         android:label="@string/title_add_post"
         tools:layout="@layout/fragment_add_post" />
 
